# blockchain_rust-

./: Cargo.toml  README.md
my-blockchain-app/: .gitignore  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
my-blockchain-app/data/: wallets
my-blockchain-app/data/blocks/: db  snap.000000000000026A
my-blockchain-app/data/utxoset/: db
my-blockchain-app/src/: env.d.ts
my-blockchain-app/src/main/: index.ts
my-blockchain-app/src/preload/: index.ts
my-blockchain-app/src/renderer/src/: App.vue  main.ts
src/: block.rs  blockchain.rs  cli.rs  main.rs  server.rs  transaction.rs  utxoset.rs  wallets.rs
