[package]
name = "blockchain-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
log = "0.4"
merkle-cbt = "0.3"
rand = "0.8"
ring = "0.17"
ripemd = "0.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
simple_logger = "4.0"
sled = "0.34"